<resources>
    <string name="app_name">AndroidLibrary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_circle_progress_view">CircleProgressViewActivity</string>
    <string name="title_activity_test_web_view_fragment">TestWebViewFragmentActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hello">个推开放平台Sdk演示程序</string>
    <string name="up">绑定sdk</string>
    <string name="down">解绑sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="unbind_alias">解除别名绑定</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_ruler">RulerActivity</string>
    <string name="title_activity_switch_layout_demo">SwitchLayoutDemoActivity</string>
    <string name="title_activity_recycler_view_demo">RecyclerViewDemoActivity</string>
    <string name="title_activity_shuffling_pager">ShufflingPagerActivity</string>
    <string name="title_activity_test_tab_layout">TestTabLayoutActivity</string>
    <string name="title_activity_segment_control">SegmentControlActivity</string>
    <string name="title_activity_ruler_height">RulerHeightActivity</string>
    <string name="title_activity_event_bus_demo1">EventBusDemo1Activity</string>
    <string name="title_activity_event_bus_demo2">EventBusDemo2Activity</string>
    <string name="title_activity_green_dao">GreenDaoActivity</string>
    <string name="title_activity_navigation_view_demo">NavigationViewDemoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tag_flow_layout">TagFlowLayoutActivity</string>
    <string name="hint_search">请输入搜索内容</string>
    <string name="title_activity_search_view">SearchViewActivity</string>
</resources>
